# Supervisedlearning

./: .dockerignore  DockerFile  README.md  app.py  model.py  pyproject.toml
